// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config negative matches snapshot 1`] = `
Object {
  "error": Array [
    Object {
      "dataPath": "",
      "keyword": "type",
      "message": "should be object",
      "params": Object {
        "type": "object",
      },
      "schemaPath": "#/type",
    },
  ],
  "tag": false,
}
`;

exports[`Instruction negative matches snapshot 1`] = `
Object {
  "error": Array [
    Object {
      "dataPath": "",
      "keyword": "type",
      "message": "should be object",
      "params": Object {
        "type": "object",
      },
      "schemaPath": "#/type",
    },
    Object {
      "dataPath": "",
      "keyword": "type",
      "message": "should be object",
      "params": Object {
        "type": "object",
      },
      "schemaPath": "#/type",
    },
    Object {
      "dataPath": "",
      "keyword": "anyOf",
      "message": "should match some schema in anyOf",
      "params": Object {},
      "schemaPath": "#/anyOf",
    },
  ],
  "tag": false,
}
`;

exports[`OutputDescriptor negative matches snapshot 1`] = `
Object {
  "error": Array [
    Object {
      "dataPath": "",
      "keyword": "type",
      "message": "should be object",
      "params": Object {
        "type": "object",
      },
      "schemaPath": "#/type",
    },
  ],
  "tag": false,
}
`;

exports[`SymbolInstruction negative matches snapshot 1`] = `
Object {
  "error": Array [
    Object {
      "dataPath": "",
      "keyword": "type",
      "message": "should be object",
      "params": Object {
        "type": "object",
      },
      "schemaPath": "#/type",
    },
  ],
  "tag": false,
}
`;
